--- a/style.css
+++ b/style.css
@@ -227,6 +227,7 @@ footer {
   background-color: rgba(228, 216, 216, 0.267);
   color: rgb(0, 0, 0);
   backdrop-filter: blur(20px);
+  text-align:center;
 }
 
 
